fixing errors, adding documentation, validation and authentication
