# controllers/users.js
@@ -14,14 +14,14 @@ const controller = {
       res.redirect('/');
     });
   },
+
   createUser: async (req, res, next) => {
     //#swagger.tags=['Users']
     const user = new User({
-      name: req.body.name,
-      email: req.body.email,
-      password: req.body.password, // Ensure password is hashed before saving
-      phone: req.body.phone,
-      role: "customer",
+      providerId: req.body.id,
+      provider: req.body.provider,
+      username: req.body.username,
+      accessLevel: 'customer',
     });
     try {
       const doc = await user.save();
@@ -40,19 +40,6 @@ const controller = {
     try {
       await User.findOneAndUpdate({ _id: id }, req.body, { lean: true });
       return res.status(204).send();
-    } catch (error) {
-      return next(error);
-    }
-  },
-
-  findByEmail: async (req, res, next) => {
-    //#swagger.tags=['Users']
-    const email = req.params.email;
-    try {
-      const doc = await User.findOne({
-        email: { $regex: email, $options: 'i' },
-      });
-      return res.status(200).json(doc);
     } catch (error) {
       return next(error);
     }
@@ -101,21 +88,18 @@ const controller = {
     const providerId = user.id;
     const provider = user.provider;
     const userName = user.username;
-    const email = user.email;
     //console.log(user);
     try {
       const user = await User.findOne({ providerId: providerId });
-      if(!user){
+      if (!user) {
         const newUser = await User.create({
           providerId: providerId,
           provider: provider,
-          userName: userName,
-          email: email,
-          accessLevel: "customer"
+          username: userName,
+          accessLevel: 'customer',
         });
         return newUser;
-      }
-      else{
+      } else {
         return user;
       }
       //return res.status(204).send();
