# routes/index.js
@@ -33,9 +33,13 @@ routes.get('/', (req, res) => {
   // #swagger.ignore = true
   res.send(
     req.session.user !== undefined
-      ? `Welcome: ${req.session.user.userName}`
+      ? `Welcome: ${req.session.user.username}`
       : 'Logged out'
   );
+});
+
+routes.get('*', (req, res) => {
+  res.send("404 That route doesn't exist");
 });
 
 module.exports = routes;
